    - removed option "use semantic analysis for goto definition", now always on
    - removed option "override linker settings from sc.ini", always on as linker no 
      longer set in sc.ini since dmd 2.079
    - removed option "additional linker options", it was invisible anyway
    - rearrange settings to better show their scope
  * dparser
    - semantic analysis did not work if "parse source for syntax errors" was disabled
    - no semantic info for a package if any file in the package has fatal parser error
    - now has semantic support for static foreach (thanks to Alexander Bothe)
    - fixed "Find references"
    - added experimental option to show value of constants in tooltip
    - the last user specified version was prepended to "Windows"
    - predefined versions now evaluated by compiler invocation
    - experimental: option to enable semantic identifier highlighting
  * mago
    - added option to show base class fields as direct fields
    - allow suffix 'h' for hex numbers for better interoperablility with VS disassembly
    - concord: can now show return values of functions stepped over (not slices or delegates 
      on x64 or small non-POD-structs)
    - concord: fix crash when showing children in data tooltip (mostly occured in VS2017)
    - concord: allow dragging addresses to the disassembly window
    - engine: Fix the way the debugger steps over instructions with REP prefix.
    - engine: the disassemble view now supports SSE4 and AVX
    - detect AA if type ends with "]", but not with "[]"
    - fix crash in VS if a value is marked expandable, but doesn't yield any children
    - fix .ptr property of static array if it is a struct/class member
  * cv2pdb
    - can now detect VS2017 via Setup-COM-API
    - some DWARF fixes
  * when pasting code to D source file newlines are adapted to surrounding code
  * fixed "Compile and Run" on selection
  * fix help via F1 for dmd 2.072+